[package]
name = "felt"
version = "0.2.0"
authors = ["Koto Furumiya <kotofurumiya@gmail.com>"]
repository = "https://github.com/kotofurumiya/felt"
categories = ["command-line-utilities"]
keywords = ["utility", "cli"]
edition = "2018"
license = "Zlib"
readme = "README.md"
description = "Defines command aliases and executes them."

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
toml = "0.5.8"
dirs = "3.0.2"

[[bin]]
name = "felt"
path = "src/felt.rs"